# Miniascape

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/: Cell.hpp  ConwaysLifeGameSimulator.hpp  Observer.hpp  PeriodicBoundary.hpp  RandomStateGenerator.hpp  Simulator.hpp  Space.hpp  Stepper.hpp  World.hpp  zip_iterator.hpp
includes/core/: Cell.hpp  NeighborhoodIndex.hpp  Observer.hpp  PeriodicBoundary.hpp  RandomNumberGenerator.hpp  RandomStateGenerator.hpp  Rule.hpp  Simulator.hpp  SquareLattice.hpp  Stepper.hpp  VacantBoundary.hpp
includes/sdl/: Definition.hpp  Exceptions.hpp  RenderableWindow.hpp  Renderer.hpp  System.hpp  Window.hpp  create_window_and_renderer.hpp  event_funcs.hpp  renderer_funcs.hpp  window_funcs.hpp
includes/util/: make_array.hpp  meta_funcs.hpp
src/: CMakeLists.txt  ConwaysLifeGameSimulator.hpp  ConwaysLifeGameTraits.hpp  ConwaysLifeGameVisualizer.hpp  GraphicalObserver.hpp  IsingModelSimulator.hpp  IsingModelTraits.hpp  IsingModelVisualizer.hpp  TuringPatternSimulator.hpp  TuringPatternTraits.hpp  TuringPatternVisualizer.hpp  conways_life_game.cpp  ising_model.cpp  turing_pattern.cpp
test/: CMakeLists.txt  test_make_array.cpp  test_periodic_boundary.cpp  test_zip_iterator.cpp
